init UI + cont. firebase auth

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,7 @@
+<h1>Dashboard</h1>
+<hr>
 <p>
-  dashboard works!
+  <span class="badge bg-secondary-dark shadow-none mr-2">TODO:</span> Setup Dashboard + Profile Modules
+  <br>
+  <button class="btn-outline-dark" (click)="auth.logout()">Logout</button>
 </p>
