--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,5 @@
-<p>home works!</p>
-<p><b>({{auth.isLoggedIn() ? 'Logged-IN' : 'Logged-OUT'}})</b></p>
-<ul>
-  <li *ngIf="!auth.isLoggedIn()"><a href="/signup">Sign Up</a></li>
-  <li *ngIf="!auth.isLoggedIn()"><a href="/login">Login</a></li>
-  <li *ngIf="auth.isLoggedIn()"><a href="/dashboard">Dashboard</a></li>
-</ul>
+<h1>Home</h1>
+<hr>
+<p>
+  <span class="badge bg-secondary-dark shadow-none mr-2">TODO:</span> Add Home Page 🔥
+</p>
