--- a/src/app/components/start/start.component.html
+++ b/src/app/components/start/start.component.html
@@ -1,3 +1,5 @@
+<h1>Quick Start</h1>
+<hr>
 <p>
-  start works!
+  <span class="badge bg-secondary-dark shadow-none mr-2">TODO:</span> Quick Start Guide
 </p>
