--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import './app/styles/external/bootstrap.css';
+@import './app/styles/external/mdb.css';
+
+@import './app/styles/reset';
+@import './app/styles/global';
+@import './app/styles/colors';
+@import './app/styles/typogrophy';
