--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<app-header></app-header>
 <div class="container">
-  <router-outlet></router-outlet>
+  <div class="mt-4 mb-5">
+    <router-outlet></router-outlet>
+  </div>
 </div>
+<app-footer></app-footer>
