--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,3 +1,58 @@
-<p>
-  signup works!
-</p>
+<div *ngIf="(auth.user | async) !== undefined && system.isBrowser(); else SSR">
+  <div *ngIf="!auth.isLoggedIn(); else isLoggedIn">
+    <h1>Sign Up
+      <button
+        (click)="auth.googleLogin()"
+        class="btn btn-sm btn-outline-elegant btn-login-google waves-effect float-right">
+          <i class="fa fa-google mr-2"></i> Use Google
+      </button>
+    </h1>
+    <hr>
+    <div class="col-lg-8 mt-5 mb-4 mr-lg-auto ml-lg-auto">
+      <form [formGroup]="signupForm" (ngSubmit)="signup()">
+        <label for="email">Email</label>
+        <input required
+          type="email"
+          name="email"
+          class="form-control"
+          [class.mb-4]="!formErrors.email"
+          autocomplete="email"
+          formControlName="email">
+        <div *ngIf="formErrors.email" class="text-danger p-2 pb-3">{{ formErrors.email }}</div>
+        <label for="password">Password</label>
+        <input required
+          type="password"
+          name="password"
+          class="form-control"
+          [class.mb-4]="!formErrors.password"
+          autocomplete="new-password"
+          formControlName="password">
+        <div *ngIf="formErrors.password" class="text-danger p-2 pb-3">{{ formErrors.password }}</div>
+        <button
+          type="submit"
+          class="btn btn-elegant btn-submit-signup waves-effect m-0 mt-3"
+          [disabled]="!signupForm.valid">Sign Up</button>
+      </form>
+    </div>
+  </div>
+  <ng-template #isLoggedIn>
+    <h1>Sign Up</h1>
+    <hr>
+    <p class="text-success">You are currently logged-in &nbsp;<i class="fa fa-thumbs-up"></i></p>
+  </ng-template>
+</div>
+<ng-template #SSR> <!-- initial render (server-side) -->
+  <h1>Sign Up</h1>
+  <hr>
+  <div class="col-lg-8 mt-5 mb-4 mr-lg-auto ml-lg-auto">
+    <form [formGroup]="signupForm">
+      <label for="email">Email</label>
+      <input type="email" name="email" class="form-control" disabled>
+      <div class="p-2 pb-3"></div>
+      <label for="password">Password</label>
+      <input type="password" name="password" class="form-control" disabled>
+      <div class="p-2 pb-3"></div>
+      <button type="submit" class="btn btn-elegant btn-submit-login waves-effect m-0 mt-3" disabled>Sign Up</button>
+    </form>
+  </div>
+</ng-template>
