--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,10 @@
 
 @import './app/styles/external/bootstrap.css';
 @import './app/styles/external/mdb.css';
+@import './app/styles/external/font-awesome.css';
 
 @import './app/styles/reset';
 @import './app/styles/global';
 @import './app/styles/colors';
 @import './app/styles/typogrophy';
+@import './app/styles/buttons';
