add displayName to dashboard

--- a/src/app/components/_dashboard/dashboard.component.html
+++ b/src/app/components/_dashboard/dashboard.component.html
@@ -2,7 +2,10 @@
   <div *ngIf="system.isBrowser()">
     <h1>Dashboard</h1>
     <hr>
-    <p>{{ user.email }}</p>
+    <p>
+      {{ user.email }}
+      <span *ngIf="user?.displayName">({{ user.displayName }})</span>
+    </p>
     <p>
       <span class="badge bg-secondary-dark shadow-none mr-2">TODO:</span> Setup Dashboard + Profile Modules
     </p>
