--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <h1>Home</h1>
 <hr>
 <p>
-  <span class="badge bg-secondary-dark shadow-none mr-2">TODO:</span> Add Home Page 🔥
+  <span class="badge bg-secondary-dark shadow-none mr-2">TODO:</span> Home Page
 </p>
