--- a/src/app/components/_nav/header/header.component.scss
+++ b/src/app/components/_nav/header/header.component.scss
@@ -7,7 +7,25 @@
 }
 
 .navbar-brand {
+  padding-top: 0;
+  padding-bottom: 0;
   transition: none;
+
+  .logo-text {
+    position: relative;
+    top: -4px;
+  }
+
+  .logo-icon {
+    display: inline-flex;
+    position: relative;
+    top: 1px;
+    left: 3px;
+    height: 30px;
+    width: 33px;
+    background-image: url(../../../../assets/icons/icon-72x72.png);
+    background-size: 100%;
+  }
 }
 
 .nav-item {
