cont. angular service-worker

--- a/src/app/components/_dashboard/dashboard.component.html
+++ b/src/app/components/_dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
     <h1>Dashboard</h1>
     <hr>
     <p>
-      {{ user.email }}
+      <b>User:</b> {{ user.email }}
       <span *ngIf="user?.displayName">({{ user.displayName }})</span>
     </p>
     <p>
