--- a/src/app/components/_nav/footer/footer.component.html
+++ b/src/app/components/_nav/footer/footer.component.html
@@ -1,3 +1,5 @@
 <footer>
-  <span class="pr-1">ngFireUniversal</span> 🔥 <span class="pl-1 dark-grey-text">0.8.0-alpha</span>
+  <span class="pr-1">ngFireUniversal</span>
+  <span class="logo-icon"></span>
+  <span class="pl-1 dark-grey-text">0.8.0-alpha</span>
 </footer>
