--- a/src/app/components/_nav/footer/footer.component.scss
+++ b/src/app/components/_nav/footer/footer.component.scss
@@ -7,4 +7,14 @@ footer {
   text-align: center;
   background: $light-grey-color;
   border-top: 1px solid $offset-grey-color;
+
+  .logo-icon {
+    display: inline-flex;
+    position: relative;
+    top: 5px;
+    height: 25px;
+    width: 28px;
+    background-image: url(../../../../assets/icons/icon-72x72.png);
+    background-size: 100%;
+  }
 }
