--- a/src/app/components/_nav/header/header.component.html
+++ b/src/app/components/_nav/header/header.component.html
@@ -33,9 +33,30 @@
         routerLinkActive="active">Dashboard</a>
     </li>
   </ul>
+  <!-- Initial render (server-side) + Offline / PWA -->
   <ng-template #isServer>
-    <ul> <!-- TODO: Setup static links -->
-      <li class="hidden">Static Link</li>
+    <ul
+      class="navbar-nav ml-auto flex-row"
+      [class.d-none]="system.isOnline()"
+      [class.d-flex]="!system.isOnline()">
+      <li class="nav-item">
+        <a
+          class="nav-link text-white"
+          routerLink="/start"
+          routerLinkActive="active">Get Started</a>
+      </li>
+      <li class="nav-item">
+        <a
+          class="nav-link text-white"
+          routerLink="/signup"
+          routerLinkActive="active">Sign Up</a>
+      </li>
+      <li class="nav-item">
+        <a
+          class="nav-link text-white"
+          routerLink="/login"
+          routerLinkActive="active">Login</a>
+      </li>
     </ul>
   </ng-template>
 </nav>
