switch asset paths to absolute

--- a/src/app/components/_nav/footer/footer.component.scss
+++ b/src/app/components/_nav/footer/footer.component.scss
@@ -14,7 +14,7 @@ footer {
     top: 5px;
     height: 25px;
     width: 28px;
-    background-image: url(../../../../assets/icons/icon-72x72.png);
+    background-image: url(/assets/icons/icon-72x72.png);
     background-size: 100%;
   }
 }
