--- a/src/app/components/_nav/header/header.component.scss
+++ b/src/app/components/_nav/header/header.component.scss
@@ -23,7 +23,7 @@
     left: 3px;
     height: 30px;
     width: 33px;
-    background-image: url(../../../../assets/icons/icon-72x72.png);
+    background-image: url(/assets/icons/icon-72x72.png);
     background-size: 100%;
   }
 }
