--- a/src/app/styles/_colors.scss
+++ b/src/app/styles/_colors.scss
@@ -1,12 +1,16 @@
 $elegant-dark-color:  #212121;
+$dark-color:          #212529;
 $special-dark-color:  #263238;
 $deep-dark-color:     #1D272C;
-$warning-dark-color:  #F80;
-$warning-color:       #FB3;
+$primary-color:       #F80;
+$orange-color:        #FB3;
 $orange-lighten-2:    #FFB74D;
 $success-green:       #00C851;
+$blue-color:          #007BFF;
+$blue-color-alt:      #4285F4;
 $bg-secondary-dark:   #9933CC;
 $light-grey-color:    #FAFAFA;
+$light-grey-color-alt:#F8F9FA;
 $offset-grey-color:   #EEE;
 $grey-color:          #DDD;
 $mid-grey-color:      #999;
