add toastr notifications

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,9 @@
 
 @import './app/styles/reset';
 @import './app/styles/global';
+@import './app/styles/animation';
+@import './app/styles/notifications';
+@import './app/styles/typogrophy';
 @import './app/styles/colors';
 @import './app/styles/typogrophy';
 @import './app/styles/buttons';
