add nav service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container">
+<div class="container" (click)="nav.collapseHeader()">
   <div class="mt-4 mb-5">
     <router-outlet></router-outlet>
   </div>
