add github link to header

--- a/src/app/components/_nav/header/header.component.html
+++ b/src/app/components/_nav/header/header.component.html
@@ -16,6 +16,12 @@
     <li class="menu-item">
       <a
         class="menu-link"
+        target="_blank"
+        href="https://github.com/jrodl3r/ng-fire-universal">GitHub</a>
+    </li>
+    <li class="menu-item">
+      <a
+        class="menu-link"
         routerLink="/start"
         routerLinkActive="active">Get Started</a>
     </li>
@@ -77,6 +83,12 @@
       class="menu"
       [class.d-none]="system.isOnline()"
       [class.d-flex]="!system.isOnline()">
+      <li class="menu-item">
+        <a
+          class="menu-link"
+          target="_blank"
+          href="https://github.com/jrodl3r/ng-fire-universal">GitHub</a>
+      </li>
       <li class="menu-item">
         <a
           class="menu-link"
