tweak root layout structure

--- a/src/app/components/start/start.component.html
+++ b/src/app/components/start/start.component.html
@@ -1,5 +1,7 @@
-<h1>Quick Start</h1>
-<hr>
-<p>
-  <span class="badge bg-secondary-dark shadow-none mr-2">TODO:</span> Quick Start Guide
-</p>
+<div class="mt-4 mb-5">
+  <h1>Quick Start</h1>
+  <hr>
+  <p>
+    <span class="badge bg-secondary-dark shadow-none mr-2">TODO:</span> Quick Start Guide
+  </p>
+</div>
