--- a/src/app/components/error/error.component.html
+++ b/src/app/components/error/error.component.html
@@ -1,9 +1,11 @@
-<div class="col-lg-8 mt-4 mb-5 mr-lg-auto ml-lg-auto text-center">
-  <h1>Error</h1>
-  <hr>
-  <p class="mt-5 mb-4">
-    <img src="https://i.imgur.com/tgnEFAM.gif" width="300">
-  </p>
-  <p class="font-italic">Houston, we have a problem...</p>
-  <a class="btn btn-warning" routerLink="/">Go Home</a>
+<div class="mt-4 mb-5">
+  <div class="col-lg-8 mt-4 mb-5 mr-lg-auto ml-lg-auto text-center">
+    <h1>Error</h1>
+    <hr>
+    <p class="mt-5 mb-4">
+      <img src="https://i.imgur.com/tgnEFAM.gif" width="300">
+    </p>
+    <p class="font-italic">Houston, we have a problem...</p>
+    <a class="btn btn-warning" routerLink="/">Go Home</a>
+  </div>
 </div>
