add dashboard tabs + views

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,4 +10,6 @@
 @import './app/styles/notifications';
 @import './app/styles/typogrophy';
 @import './app/styles/colors';
+@import './app/styles/forms';
+@import './app/styles/tabs';
 @import './app/styles/buttons';
