--- a/src/app/components/_dashboard/dashboard.component.html
+++ b/src/app/components/_dashboard/dashboard.component.html
@@ -1,19 +1,18 @@
 <div *ngIf="(auth.user | async) as user">
-  <div *ngIf="system.isBrowser() && system.isOnline()">
-    <h1>Dashboard</h1>
-    <hr>
-    <p>
-      <b>User:</b> {{ user.email }}
-      <span *ngIf="user?.displayName">({{ user.displayName }})</span>
-    </p>
-    <p>
-      <span class="badge bg-secondary-dark shadow-none mr-2">TODO:</span> Setup Dashboard + Profile Modules
-    </p>
-    <br>
-    <hr>
-    <router-outlet></router-outlet>
+  <div
+    *ngIf="system.isBrowser() && system.isOnline()"
+    class="row mt-md-4 mb-5">
+    <div class="col-12 col-md-3 pr-md-1 pr-lg-2">
+      <app-tabs class="mobile-tabs"></app-tabs>
+      <app-profile [user]="user"></app-profile>
+    </div>
+    <div class="col-12 col-md-9 pr-0 pr-sm-3 pl-0 pl-sm-3">
+      <app-tabs class="desktop-tabs"></app-tabs>
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
+<!-- Offline / PWA -->
 <div *ngIf="system.isBrowser() && !system.isOnline()">
   <p class="text-warning text-center">Connection Lost!<br>Please check your connection.</p>
 </div>
