--- a/src/app/components/_nav/header/header.component.html
+++ b/src/app/components/_nav/header/header.component.html
@@ -12,7 +12,7 @@
   <ul
     class="menu"
     [class.expanded]="nav.isHeaderMenuExpanded"
-    *ngIf="(auth.user | async) !== undefined && !auth.isLoading && system.isBrowser(); else isServer">
+    *ngIf="(auth.user | async) !== undefined && !auth.isLoading && system.isBrowser() && system.isOnline(); else isServer">
     <li class="menu-item">
       <a
         class="menu-link"
@@ -81,8 +81,7 @@
   <ng-template #isServer>
     <ul
       class="menu"
-      [class.d-none]="system.isOnline()"
-      [class.d-flex]="!system.isOnline()">
+      [class.d-none]="system.isOnline()">
       <li class="menu-item">
         <a
           class="menu-link"
