--- a/src/app/components/_dashboard/profile/profile.component.html
+++ b/src/app/components/_dashboard/profile/profile.component.html
@@ -34,7 +34,7 @@
     <a
       *ngIf="user.profile"
       routerLink="/settings/profile"
-      class="btn btn-sm btn-light waves-effect shadow-none mt-4 mb-5">
+      class="btn btn-sm btn-light shadow-none mt-4 mb-5">
         <i class="fa fa-pencil mr-1"></i>
         Edit Profile
     </a>
