--- a/src/app/components/_dashboard/dashboard.component.scss
+++ b/src/app/components/_dashboard/dashboard.component.scss
@@ -8,8 +8,13 @@
 }
 
 .mobile-tabs {
-  left: calc(-1 * (100vw - 100%) / 2);
-  width: 100vw;
+  left: 0;
+  width: 100%;
+
+  @media (min-width: $xs-screen) {
+    left: calc(-1 * (100vw - 100%) / 2);
+    width: 100vw;
+  }
 
   @media (min-width: $md-screen) {
     display: none;
