add settings module + views

--- a/src/app/components/_dashboard/dashboard.component.html
+++ b/src/app/components/_dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
   <div
     *ngIf="system.isBrowser() && system.isOnline()"
     class="row mt-md-4 mb-5">
-    <div class="col-12 col-md-3 pr-md-1 pr-lg-2">
+    <div class="col-12 col-md-3 pr-0 pr-md-1 pr-lg-2 pl-0">
       <app-tabs
         class="mobile-tabs"
         [tabs]="tabs"></app-tabs>
