--- a/src/app/components/_nav/tabs/tabs.component.html
+++ b/src/app/components/_nav/tabs/tabs.component.html
@@ -2,7 +2,8 @@
   <ul
     class="tabs"
     [class.flex-md-column]="flexMdColumn"
-    [class.justify-sm-center]="justifySmCenter">
+    [class.justify-sm-center]="justifySmCenter"
+    [class.vertical-desktop]="verticalDesktop">
     <li
       *ngFor="let tab of tabs"
       class="tab-item">
